--- a/test.ipynb
+++ b/test.ipynb
@@ -103,6 +103,55 @@
     "if __name__ == \"__main__\":\n",
     "    generate()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ed8664b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "file = \"Backend_new/user_data.json\"\n",
+    "import os\n",
+    "\n",
+    "object = json.load(open(file, \"r\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e25f2268",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import wave\n",
+    "import base64\n",
+    "\n",
+    "def save_base64_to_wav(base64_data, output_filename):\n",
+    "    audio_bytes = base64.b64decode(base64_data)\n",
+    "    with open(output_filename, \"wb\") as f:\n",
+    "        f.write(audio_bytes)\n",
+    "\n",
+    "# Example usage:\n",
+    "# save_base64_to_wav(your_base64_string, \"output.wav\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fecf5d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = \"http://localhost:8000\"\n",
+    "# replace with your actual payload\n",
+    "response = requests.post(url, json=object)\n",
+    "print(\"Status code:\", response.status_code)\n",
+    "print(\"Response body:\", response.text)"
+   ]
   }
  ],
  "metadata": {
@@ -121,7 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
